--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node scripts/build-redirects.cjs",
+    "build": "react-scripts --openssl-legacy-provider build && node scripts/build-redirects.cjs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
