--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "highlight.js": "^10.7.2",
     "react-loader-spinner": "^5.3.4"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "test": "cd contracts && hardhat test",
     "compile:contracts": "cd contracts && hardhat clean && hardhat compile",
